# earworm

./: .env.example  .gitignore  README.md  add_melody.py  index.html  pyproject.toml
assets/: index-Bk-9eJqX.css  index-DzApVZ6t.js
logic-automation/: README.md  earworm-logic  test-keys
logic-automation/lib/: automate.applescript  dump_menus.applescript
melodies/: billie-eilish-birds-of-a-feather.melody.json  fred-again-angie-i-ve-been-lost.melody.json  fred-again-delilah-pull-me-out-of-this-tiny-desk-live.melody.json  fred-again-kyle-i-found-you.melody.json  manifest.json  mgmt-kids.melody.json  newton-faulkner-dream-catch-me.melody.json  shade-sheist-where-i-wanna-be-feat-kurupt-nate-dogg.melody.json
src/chops/: __init__.py  _beats_runner.py  _lyrics_runner.py  audio.py  beats.py  chords.py  cli.py  key.py  library.py  logic.py  lyrics.py  meta.py  midi_process.py  pipeline.py  render.py  sonofield.py  stems.py  transcribe.py  utils.py
src/chops/templates/: index.html.j2
src/earworm/: __init__.py  _lyrics_runner.py  cli.py  fetch.py  llm.py  logic.py  logic_build.py  meta.py  midi_process.py  motif_features.py  motifs.py  pipeline.py  roman.py  sections.py  sync.py  transcribe.py  utils.py
web/: .env.production  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  main.js
web/src/components/: AbsRelToggle.svelte  DegreeChips.svelte  LyricSearch.svelte  MotifCard.svelte  MotifPanel.svelte  OverviewWaveform.svelte  SectionControls.svelte  SectionView.svelte  SideRail.svelte  SonofieldWheel.svelte  StemsPanel.svelte
(+13 files in other folders)
