[project]
name = "chops"
version = "0.1.0"
description = "Logic Pro project -> stems + MIDI + harmonic analysis -> web workstation"
readme = "README.md"
authors = [
    { name = "Alister Burt", email = "alisterburt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pretty-midi>=0.2.11",
    "scipy>=1.18.0",
    "soundfile>=0.14.0",
    "typer>=0.26.7",
]

[project.scripts]
chops = "chops.cli:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
preview = true
